--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "Desafio_01",
+  "name": "Desafio_02",
   "version": "1.0.0",
   "main": "src/server.js",
   "repository": "https://github.com/francyleo/GoStackRocketseatDesafio02.git",
   "author": "Francyleo Matos",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,6 +15,8 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   }
 }
